--- a/config/mapper_params_online_async.yaml
+++ b/config/mapper_params_online_async.yaml
@@ -13,14 +13,14 @@ slam_toolbox:
     odom_frame: odom
     map_frame: map
     base_frame: base_footprint
-    scan_topic: /scan
+    scan_topic: /scan_filtered
     use_map_saver: true 
     mode: mapping
 
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
     # will use pose
-    # map_file_name: /home/phong/dev_ws/test
+    # map_file_name: /home/phong/dev_ws/map_serial_mo_phong
     # map_start_pose: [0.0, 0.0, 0.0]
     # map_start_at_dock: true
 
